# fish-coins-bot-master

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  bot.py  pyproject.toml  test.py
.github/workflows/: deploy.yml
fish_coins_bot/database/: __init__.py  database_config.py  models.py  startup_tasks.py
fish_coins_bot/database/hotta/: arms.py  daily_merchant_info.py  event_consultation.py  event_news.py  food.py  gacha_record.py  nuo_coins.py  willpower.py  yu_coins.py
fish_coins_bot/plugins/agent/: __init__.py  ask_alias.py
fish_coins_bot/plugins/ai_chat/: __init__.py  reply_info.py
fish_coins_bot/plugins/bilibili/: __init__.py  dynamics_push.py  live_now.py
fish_coins_bot/plugins/delta_force/: __init__.py  delta_force_request.json  reply_info.py  reply_room.py
fish_coins_bot/plugins/download/: __init__.py  download_video.py
fish_coins_bot/plugins/hotta_wiki/: __init__.py  alias.json  gacha_config.json  make_arms_attack_img.py  make_arms_img.py  make_event_consultation.py  make_event_news.py  make_food_img.py  make_willpower_img.py  reply_arms_attack_img.py  reply_arms_img.py  reply_artifact_img.py  (+9 more)
fish_coins_bot/utils/: __init__.py  ai_client.py  downloads.py  dynamics_config.py  image_utils.py  minio_client.py  model_utils.py  nuo_coins_utils.py  startup_tasks.py  yu_coins_utils.py
templates/: template-arms-attack.html  template-arms.html  template-event-consultation-end-plus.html  template-event-consultation-end.html  template-event-news-end-plus.html  template-food.html  template-nuo-coins-type.html  template-nuo-coins-weekly.html  template-wiki-help.html  template-willpower.html  template-yu-coins-type.html  template-yu-coins-weekly.html  template.html
tests/: test_persona_mirror_v2.py
(+36 files in other folders)
