[tool.poetry]
name = "fish-coins-bot-master"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
nonebot2 = {extras = ["fastapi"], version = "^2.4.0"}
nonebot-adapter-console = "^0.6.0"
uvicorn = "^0.32.0"
nonebot-adapter-onebot = "^2.4.6"
nonebot-plugin-apscheduler = "^0.5.0"
tortoise-orm = {extras = ["aiomysql"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nonebot]
plugin_dirs = ["fish_coins_bot/plugins"]
